bzip2ida/g1/compress
/data/output_dir/patch/bzip2/ida/gcc/O1/bzip2-gcc-O1/compress/src/bzip2.c:1806:9: error: use of undeclared identifier 'BZ2_crc32Table'
while ( BZ2_crc32Table != ( UInt32 *)v1 ); 
        ^
1 error generated.
make: *** [/data/output_dir/patch/bzip2/ida/gcc/O1/bzip2-gcc-O1/compress/src/obj/bzip2.o] Error 1
